# graphene

./: .gitignore  Anchor.toml  CLAUDE.md  Cargo.toml  README.md  conductor.json  index.html  lefthook.yml  lima.yaml  package.json  tsconfig.json  worker.toml.example
.beads/export-state/: 077860d5bee61bbc.json  2456076c5d1ad18b.json  2a00eca757e7acbf.json  3f4873e870880aaa.json  52b1b09707456d09.json  5cf0f29685d9e49d.json  68e3ef28bdadea13.json  6c84c5723ab5c075.json  8732c0aa675fc401.json  95876a724a01c028.json  a0fb74e42d7b414b.json  a447b135063eca20.json  b821425184f00606.json  c1f0f68b07057e4c.json  d5ea4b947ca76091.json  e401d3c8fbaf287b.json  f862bc4c5c2892c7.json
.github/actions/setup-system/: action.yml
.github/workflows/: CLAUDE.md  builder-artifacts.yml  ci.yml  e2e-test.yml  kernel-build.yml  node-os-buildroot.yml  node-os-yocto.yml  sdk-build.yml
assets/vm/: .gitkeep  README.md
crates/client/: Cargo.toml
crates/client/src/: lib.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/ctl/: Cargo.toml  README.md
crates/ctl/src/: CLAUDE.md  client.rs  config.rs  lib.rs  main.rs  output.rs
crates/ctl/src/commands/: CLAUDE.md  apply.rs  bootstrap.rs  capability.rs  config.rs  edit.rs  get.rs  lifecycle.rs  logs.rs  metrics.rs  mod.rs  reboot.rs  status.rs  upgrade.rs
crates/node/: CLAUDE.md  Cargo.toml
crates/node/benches/: ticket_validation.rs
crates/node/grafana/: graphene-node-dashboard.json  opencapsule-node-dashboard.json
crates/node/src/: CLAUDE.md  api.rs  lib.rs  protocol.rs  types.rs
crates/node/src/attestation/: embedded.rs  mock.rs  mod.rs  tpm.rs  types.rs  verity.rs
crates/node/src/builder/: CLAUDE.md  linux.rs  mock.rs  mod.rs
crates/node/src/cache/: CLAUDE.md  build.rs  iroh.rs  keys.rs  local.rs  mock.rs  mod.rs
crates/node/src/cost/: calculator.rs  mock.rs  mod.rs  tracker.rs  types.rs
crates/node/src/crypto/: CLAUDE.md  channel_keys.rs  job_crypto.rs  mock.rs  mod.rs
crates/node/src/discovery/: README.md  mock.rs  mod.rs  service.rs  types.rs
crates/node/src/ephemeral/: CLAUDE.md  builder.rs  drive.rs  mock.rs  mod.rs  network.rs  types.rs
crates/node/src/executor/: CLAUDE.md  default.rs  drive.rs  mod.rs  types.rs
crates/node/src/executor/output/: mock.rs  mod.rs
crates/node/src/executor/runner/: mock.rs  mod.rs
crates/node/src/http/: handlers.rs  management.rs  mod.rs  router.rs  state.rs
crates/node/src/job/: CLAUDE.md  README.md  mod.rs  state.rs  types.rs
crates/node/src/kernel/: CLAUDE.md  README.md  local.rs  matrix.rs  mock.rs  mod.rs  types.rs
crates/node/src/management/: README.md  capability.rs  config.rs  handler.rs  mod.rs  protocol.rs
crates/node/src/metrics/: mod.rs  recorder.rs  types.rs
crates/node/src/p2p/: CLAUDE.md  README.md  graphene.rs  messages.rs  mock.rs  mod.rs  types.rs  validation.rs
crates/node/src/p2p/protocol/: README.md  handler.rs  mod.rs  types.rs  validation.rs  wire.rs
crates/node/src/result/: async_delivery.rs  mock.rs  mod.rs  sync.rs
crates/node/src/ticket/: README.md  channel_manager.rs  channel_state.rs  channel_sync.rs  mock.rs  mod.rs  signer.rs  solana_client.rs  types.rs  validator.rs
crates/node/src/unikraft/: CLAUDE.md  README.md  dockerfile.rs  kraft.rs  mock.rs  mod.rs  types.rs
crates/node/src/vmm/: CLAUDE.md  firecracker.rs  firecracker_test.rs  mock.rs  mod.rs  types.rs
crates/node/src/worker/: CLAUDE.md  README.md  config.rs  context.rs  daemon.rs  error.rs  mod.rs  solana.rs  state.rs
crates/node/tests/: CLAUDE.md  attestation_gating.rs  build_cache_layered_integration.rs  cache_local.rs  cost_tracker_integration.rs  crypto_roundtrip.rs  drive_ext4_contents.rs  drive_initrd_contents.rs  e2e_job_flow.rs  ephemeral_network_isolation.rs  executor_cache_integration.rs  executor_compression_integration.rs  executor_integration.rs  firecracker_integration.rs  firecracker_runner_integration.rs  firecracker_unikraft_executor_integration.rs  job_protocol_integration.rs  output_processor_integration.rs  p2p_integration.rs
crates/node/tests/e2e/: mod.rs  unikraft_build.rs
crates/sdk/: .npmignore  Cargo.toml  index.js  package.json
crates/sdk/src/: lib.rs
docs/: BRANDING.md  CLAUDE.md  CONVERSATIO-1.md  DEVELOPMENT.md  ELI5.md  ENDGAME.md  GTM.md  INVESTOR_PITCHING.md  PROOF-OF-BUILD.md  ROADMAP-2.md  ROADMAP.md  WHITEPAPER-2.md  WHITEPAPER-3.md  WHITEPAPER-4.md  WHITEPAPER-5.md  WHITEPAPER.md  WORKER-PAYOUT.md  address-book.md  content-addressable-compute.md  node-os-yocto.md
docs/adr/: ADR-0001-sdk-discovery-architecture.md  ADR-0002-inline-job-assets.md  ADR-0003-embedded-relay-architecture.md
docs/agents/: agent-discovery-layer.md
docs/schemas/: worker-announcement.v2.json
examples/unikraft-node/: Dockerfile  Kraftfile.yaml  README.md  index.js  package.json
kernels/: CLAUDE.md  README.md  kernel-matrix.toml
kernels/node/20/: CLAUDE.md  (+1 more)
node-os/: README.md  os-matrix.toml
programs/graphene/: CLAUDE.md  Cargo.toml  README.md
programs/graphene/src/: CLAUDE.md  error.rs  lib.rs
programs/graphene/src/instructions/: CLAUDE.md  channel.rs  mod.rs  registry.rs
programs/graphene/src/state/: CLAUDE.md  channel.rs  mod.rs  worker.rs
programs/graphene/src/utils/: ed25519.rs
programs/graphene/tests/: CLAUDE.md  graphene.test.ts
scripts/: CLAUDE.md  build-vm-artifacts.sh  generate-build-matrix.py  generate-build-matrix.ts  generate-kernel-metadata.py  generate-kernel-metadata.ts
scripts/node-os-yocto/: README.md  build-image.sh  check-image-size.sh  clone-deps.sh  configure-build.sh  enable-userns.sh  env.sh  generate-build-metadata.sh  install-deps.sh  parse-recipes.sh  verify-shell-removal.sh
sdks/node/: .gitignore  README.md  package.json
sdks/node/native/: Cargo.toml  README.md  index.d.ts  index.js  package.json
sdks/node/native/src/: CLAUDE.md  lib.rs
sdks/rust/: Cargo.toml  index.d.ts
sdks/rust/src/: lib.rs
sdks/rust/tests/: protocol.test.mjs
src/: main.rs
src/builder/: mock.rs
src/cache/: local.rs  mock.rs  mod.rs
src/vmm/: mock.rs  types.rs
tests/: graphene.test.ts  graphene.ts
(+77 files in other folders)
