[package]
name = "monad"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# The official AWS Firecracker SDK.
# Note: Ensure you have the firecracker binary (v1.7+) installed globally or in path.
firecracker-rs-sdk = { version = "0.1", features = ["_rt-tokio"] }
tempfile = "3.8"
reqwest = { version = "0.11", features = ["json"] }
