[workspace]
members = [
    "crates/node",
]
resolver = "2"

[workspace.package]
license = "AGPL-3.0-only"
repository = "https://github.com/graphene-network/graphene"

[profile.release]
overflow-checks = true

[patch.crates-io]
# Fix curve25519-dalek 5.0.0-pre.1 for digest 0.11.0-rc.11 compatibility
# (crypto_common was renamed to common in newer digest versions)
curve25519-dalek = { git = "https://github.com/marcus-sa/curve25519-dalek", branch = "fix/digest-0.11-compat" }
