[package]
name = "opencapsulectl"
version = "0.1.0"
edition = "2021"
license.workspace = true
repository.workspace = true
description = "Remote management CLI for OpenCapsule nodes"

[lib]
name = "opencapsulectl"
path = "src/lib.rs"

[[bin]]
name = "opencapsulectl"
path = "src/main.rs"

[dependencies]
# Core dependencies
opencapsule_node = { path = "../node" }
tokio = { version = "1.49", features = ["full"] }
anyhow = "1.0"
thiserror = "2.0"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Utilities
hex = "0.4"
dirs = "5.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.14"
