[package]
name = "monad_node"
version = "0.1.0"
edition = "2021"
license.workspace = true
repository.workspace = true

[features]
default = []
integration-tests = []
e2e = []
tpm2-tools = []  # Enable TPM2 command-line tool fallback for attestation

[dependencies]
# The official AWS Firecracker SDK.
# Note: Ensure you have the firecracker binary (v1.7+) installed globally or in path.
firecracker-rs-sdk = { version = "0.1", features = ["_rt-tokio"] }
tempfile = "3.8"
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1.89"
uuid = { version = "1.4", features = ["v4"] }
sha2 = "0.10"
hex = "0.4"
axum = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.49.0", features = ["full", "signal"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
schemars = "0.8"
anyhow = "1.0.100"
thiserror = "2.0"
rand = "0.8"
libc = "0.2"
prometheus = "0.13"
lazy_static = "1.4"

# Iroh P2P networking
iroh = "0.96"
iroh-blobs = { version = "0.98", features = ["fs-store"] }
iroh-gossip = { version = "0.96", features = ["net"] }
blake3 = "1.5"
futures-lite = "2.6"

# Unikraft build pipeline
tar = "0.4"
dockerfile-parser = "0.9"

# CLI and configuration
clap = { version = "4.5", features = ["derive", "env"] }
toml = "0.8"
dirs = "5.0"

# Cryptography for encrypted job I/O
# NOTE: Versions match iroh 0.96's transitive dependencies to avoid conflicts
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
hkdf = "0.12"
hmac = "0.12"
ed25519-dalek = { version = "3.0.0-pre", features = ["hazmat"] }
curve25519-dalek = { version = "5.0.0-pre" }
zeroize = { version = "1.7", features = ["derive"] }

# Configuration and system info
serde_yaml = "0.9"
num_cpus = "1.16"

# Solana integration
solana-sdk = "2.1"
solana-client = "2.1"

[dev-dependencies]
tempfile = "3.8"
rand = "0.8"


# TODO: Binaries need updating for iroh 0.96.0 API changes
# [[bin]]
# name = "monad-server"
# path = "bin/server.rs"

# [[bin]]
# name = "monad-client"
# path = "bin/client.rs"
