[package]
name = "graphene_node"
version = "0.1.0"
edition = "2021"
license.workspace = true
repository.workspace = true

[features]
default = []
integration-tests = []
e2e-tests = []
tpm2-tools = []  # Enable TPM2 command-line tool fallback for attestation

[dependencies]
# The official AWS Firecracker SDK.
# Note: Ensure you have the firecracker binary (v1.7+) installed globally or in path.
firecracker-rs-sdk = { version = "0.1", features = ["_rt-tokio"] }
tempfile = "3.8"
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1.89"
uuid = { version = "1.4", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"
axum = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.49.0", features = ["full", "signal"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
schemars = "0.8"
anyhow = "1.0.100"
thiserror = "2.0"
rand = "0.8"
libc = "0.2"
prometheus = "0.13"
lazy_static = "1.4"
once_cell = "1.21"
regex = "1.11"
blake3 = "1.5"

# Unikraft build pipeline
tar = "0.4"
dockerfile-parser = "0.9"

# CLI and configuration
clap = { version = "4.5", features = ["derive", "env"] }
toml = "0.8"
dirs = "5.0"

# System info
num_cpus = "1.16"

# Compression for inline job assets
zstd = "0.13"

# Cryptography for job I/O encryption
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
hkdf = "0.12"
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
curve25519-dalek = "4.1"
zeroize = { version = "1.7", features = ["derive"] }

[dev-dependencies]
tempfile = "3.8"
rand = "0.8"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
tower = { version = "0.4", features = ["util"] }

[[bin]]
name = "graphene-worker"
path = "bin/server.rs"
